--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,35 @@
 </head>
 <body>
     <div class="wrapper">
-        <header></header>
-        <section></section>
-        <footer></footer>
+        <header>
+            <span>搜索</span>
+            <span><b>推荐</b><b>北京</b></span>
+            <span>··</span>
+        </header>
+        <section>
+            <div class="font">
+                 <h3>@一禅经典语录</h3>
+                <p>在何时的就雷克萨大家发链接四六级的浪费据了解数量肯定积分路径@抖音小助手#情感语录#一阐小和尚</p> 
+                <p>@一禅经典语录创作的原声</p>
+            </div>
+            <div class="asild">
+               <ul>
+                   <li><img src="img/2.jpg" alt=""></li>
+                   <li>★<b>3.7w</b></li>
+                   <li>●<b>851</b></li>
+                   <li>◆<b>1.1w</b></li>
+                   <li></li>
+               </ul>
+            </div>
+            
+        </section>
+        <footer>
+            <span>首页</span>
+            <span>关注</span>
+            <span>+</span>
+            <span>消息</span>
+            <span>我</span>
+        </footer>
     </div>
 </body>
 </html>
