--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="js/flexible.js"></script>
+    <script src="js/common/flexible.js"></script>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <span>搜索</span>
+            <span id="search">搜索</span>
             <span><b>推荐</b><b>北京</b></span>
-            <span>··</span>
+            <span id="gengduo">··</span>
         </header>
         <section>
             <div class="font">
@@ -23,10 +24,9 @@
             <div class="asild">
                <ul>
                    <li><img src="img/2.jpg" alt=""></li>
-                   <li>★<b>3.7w</b></li>
-                   <li>●<b>851</b></li>
-                   <li>◆<b>1.1w</b></li>
-                   <li></li>
+                   <li>★<br><span>1.2w</span> </li>
+                   <li>●<br><span>851</span></li>
+                   <li>◆<br><span>1.1w</span></li>
                </ul>
             </div>
             
@@ -40,4 +40,6 @@
         </footer>
     </div>
 </body>
+<script src="js/a.js"></script>
+<script src="js/b.js"></script>
 </html>
